--- a/index.html
+++ b/index.html
@@ -31,10 +31,48 @@
                         that goes here under the main title
                         It's a smaller font and the color is lower contrast
                     </div>
-                    <button class="sign-up"></button>
+                    <button class="sign-up">Sign up</button>
+                    <img>
                 </div>
                 <div class="image">
 
+                </div>
+            </div>
+            <div class="main">
+                <div>Some random information</div>
+                <div class="image-row">
+                    <div class="image-block">
+                        <img>
+                        <div>this is some subtext </div>
+                    </div>
+                    <div class="image-block">
+                        <img>
+                        <div>this is some subtext </div>
+                    </div>
+                    <div class="image-block">
+                        <img>
+                        <div>this is some subtext </div>
+                    </div>
+                    <div class="image-block">
+                        <img>
+                        <div>this is some subtext </div>
+
+                    </div>
+                </div>
+                <div class="quote-block">
+                    <p class="quote">This is an inspiring quote, or a testominal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p> 
+                    <p class="quote-author">- Thor, God of Thunder</p>
+                </div>
+                <div>
+                    <div>
+                        <div>
+                            <div>Call to action! It's time!</div>
+                            <div>Sign up for our product by... </div>
+                        </div>
+                        <div>
+                            <button>Sign up</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
