--- a/index.html
+++ b/index.html
@@ -3,30 +3,33 @@
     <head>
         <meta charset="UTF-8">
         <title>Landing Page</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <div class="header">
             <div class="topbar">
-                <div>
+                <div class="header-logo">
                     Header Logo
                 </div>
-                <div>
-                    Header Link 1
-                </div>
-                <div>
-                    Header Link 2
-                </div>
-                <div>
-                    Header Link 3
+                <div class="container">
+                    <div class="item">
+                        Header Link 1
+                    </div>
+                    <div class="item">
+                        Header Link 2
+                    </div class="item">
+                    <div class="item">
+                        Header Link 3
+                    </div>
                 </div>
             </div>
             <div>
                 <div class="content">
-                    <div>
+                    <div class="hero-main">
                         This website is awesome
                     </div>
-                    <div>
+                    <div class="hero-secondary">
                         This website has some subtext 
                         that goes here under the main title
                         It's a smaller font and the color is lower contrast
@@ -38,40 +41,40 @@
 
                 </div>
             </div>
-            <div class="main">
-                <div>Some random information</div>
-                <div class="image-row">
-                    <div class="image-block">
-                        <img>
-                        <div>this is some subtext </div>
-                    </div>
-                    <div class="image-block">
-                        <img>
-                        <div>this is some subtext </div>
-                    </div>
-                    <div class="image-block">
-                        <img>
-                        <div>this is some subtext </div>
-                    </div>
-                    <div class="image-block">
-                        <img>
-                        <div>this is some subtext </div>
+        </div>
+        <div class="main">
+            <div>Some random information</div>
+            <div class="image-row">
+                <div class="image-block">
+                    <img>
+                    <div>this is some subtext </div>
+                </div>
+                <div class="image-block">
+                    <img>
+                    <div>this is some subtext </div>
+                </div>
+                <div class="image-block">
+                    <img>
+                    <div>this is some subtext </div>
+                </div>
+                <div class="image-block">
+                    <img>
+                    <div>this is some subtext </div>
 
-                    </div>
                 </div>
-                <div class="quote-block">
-                    <p class="quote">This is an inspiring quote, or a testominal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p> 
-                    <p class="quote-author">- Thor, God of Thunder</p>
-                </div>
+            </div>
+            <div class="quote-block">
+                <p class="quote">This is an inspiring quote, or a testominal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p> 
+                <p class="quote-author">- Thor, God of Thunder</p>
+            </div>
+            <div>
                 <div>
                     <div>
-                        <div>
-                            <div>Call to action! It's time!</div>
-                            <div>Sign up for our product by... </div>
-                        </div>
-                        <div>
-                            <button>Sign up</button>
-                        </div>
+                        <div>Call to action! It's time!</div>
+                        <div>Sign up for our product by... </div>
+                    </div>
+                    <div>
+                        <button>Sign up</button>
                     </div>
                 </div>
             </div>
