--- a/index.html
+++ b/index.html
@@ -37,28 +37,25 @@
                     <button class="sign-up">Sign up</button>
                     <img>
                 </div>
-                <div class="image">
-
-                </div>
             </div>
         </div>
         <div class="main">
             <div>Some random information</div>
             <div class="image-row">
                 <div class="image-block">
-                    <img>
+                    <div class="image"></div>
                     <div>this is some subtext </div>
                 </div>
                 <div class="image-block">
-                    <img>
+                    <div class="image"></div>
                     <div>this is some subtext </div>
                 </div>
                 <div class="image-block">
-                    <img>
+                    <div class="image"></div>
                     <div>this is some subtext </div>
                 </div>
                 <div class="image-block">
-                    <img>
+                    <div class="image"></div>
                     <div>this is some subtext </div>
 
                 </div>
