--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="hero">
                 <div class="content">
                     <div class="hero-main">
                         This website is awesome
@@ -36,6 +36,9 @@
                     </div>
                     <button class="sign-up">Sign up</button>
                     <img>
+                </div>
+                <div class="hero-img">
+
                 </div>
             </div>
         </div>
