--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="main">
-            <div>Some random information</div>
+            <div class="info-header">Some random information</div>
             <div class="image-row">
                 <div class="image-block">
                     <div class="image"></div>
@@ -67,23 +67,17 @@
                 <p class="quote">This is an inspiring quote, or a testominal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p> 
                 <p class="quote-author">- Thor, God of Thunder</p>
             </div>
-            <div>
-                <div>
-                    <div>
-                        <div>Call to action! It's time!</div>
-                        <div>Sign up for our product by... </div>
-                    </div>
-                    <div>
-                        <button>Sign up</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div>
-            
         </div>
         <div class="footer">
-
+            <div>
+                <div>
+                    <div>Call to action! It's time!</div>
+                    <div>Sign up for our product by... </div>
+                </div>
+                <div>
+                    <button>Sign up</button>
+                </div>
+            </div>
         </div>
     </body>
 </html>
