--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
             <div class="image-row">
                 <div class="image-block">
                     <div class="image"></div>
-                    <div>this is some subtext </div>
+                    <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="image-block">
                     <div class="image"></div>
-                    <div>this is some subtext </div>
+                    <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="image-block">
                     <div class="image"></div>
-                    <div>this is some subtext </div>
+                    <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="image-block">
                     <div class="image"></div>
-                    <div>this is some subtext </div>
+                    <div>this is some subtext under an illustration or image</div>
 
                 </div>
             </div>
