--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             </div>
         </div>
         <div class="footer">
-            <div>
+            <div class="footer-container">
                 <div>
-                    <div>Call to action! It's time!</div>
-                    <div>Sign up for our product by... </div>
+                    <div class="footer-title">Call to action! It's time!</div>
+                    <div class="footer-text">Sign up for our product by... </div>
                 </div>
                 <div>
-                    <button>Sign up</button>
+                    <button class="footer-sign-up">Sign up</button>
                 </div>
             </div>
         </div>
